--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1 class="text-3xl font-bold underline">Auction Site</h1>
+<div class="flex justify-between border-b-2 border-black bg-orange-400">
+  <button class="text-2xl font-semibold p-4 border-r-2 border-black">
+    Menu
+  </button>
+
+  <h1 class="text-3xl font-semibold p-4 font-mono">Auction Site</h1>
+  <button class="text-2xl font-semibold border-l-2 border-black p-4">
+    Are you a Member? Register/Login
+  </button>
+</div>
+<app-items> </app-items>
