--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>Auction Items</h1>
+  <h1 class="text-3xl">Auction Items</h1>
   <div class="grid grid-cols-5 gap-10">
     <span *ngFor="let item of auctionItemsArray">
       <h1 class="font-semibold">{{ item.title }}</h1>
@@ -8,6 +8,7 @@
         <h2>{{ item.albumId }}</h2>
       </div>
       <img src="{{ item.url }}" alt="item image" width="500" height="600" />
+      <button (click)="addItemToCart(item)">Add to Bidding Cart</button>
     </span>
   </div>
 </div>
