--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,16 @@
   </button>
 
   <h1 class="text-3xl font-semibold p-4 font-mono">Auction Site</h1>
-  <button class="text-2xl font-semibold border-l-2 border-black p-4">
+  <a
+    routerLink="/login"
+    routerLinkActive="active"
+    ariaCurrentWhenActive="page"
+    class="text-2xl font-semibold border-l-2 border-black p-4"
+  >
     Are you a Member? Register/Login
-  </button>
+  </a>
 </div>
-<app-items> </app-items>
+
+<app-cart></app-cart>
+
+<app-items (itemToCart)="itemToBeAddedToCart($event)"></app-items>
